# laya

./: Cargo.toml  README.md  laya.code-workspace  rustfmt.toml
.github/workflows/: build.yml
laya-storage/: Cargo.toml  README.md
laya-storage-dlcs/: Cargo.toml  README.md
laya-storage-dlcs/src/: lib.rs
laya-storage/src/: fs.rs  lib.rs
src/: image.rs  main.rs  storage.rs  telemetry.rs
src/iiif/: http.rs  parse.rs  service.rs
src/image/: info.rs  reader.rs  transcoding.rs
src/image/codec/: kaduceus.rs
src/image/reader/: kaduceus.rs
src/image/transcoding/: decode.rs  encode.rs
src/runtime/: tokio.rs
src/storage/: opendal.rs
